# context_compaction

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  OLLAMA_GUIDE.md  README.md  __init__.py  config.json  dev-server.sh  example_config.json  pyproject.toml  simple_plugin_example.py  test_extension.py
presets/: README.md  anthropic.json  ollama-4gb.json  ollama-8gb.json  openai.json
